# win32-displayinfo

./: .gitignore  .vsconfig  CMakeLists.txt  CMakePresets.json  DisplayInfo.cpp  DisplayInfo.manifest  README.md  build.ps1  deps.ps1  install_admin.ps1  install_user.ps1
.github/workflows/: ci.yml  cmake-single-platform.yml  cmake-windows.yml  release.yml
DisplayConfig/: DisplayConfig.h
